zellij-integration-tests/tests/snapshots/resize__resize_increase_in_normal_mode.snap
---
source: zellij-integration-tests/tests/resize.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
┌ Pane #1 ─────────────┐┌ Pane #2 ─────────────────────────────────────────────────────────────────────────────────────┐
│$                     ││$ █                                                                                           │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
└──────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────┘
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
